2004-09-01  Johan Dahlin  <johan@gnome.org>

	* data/registry/basecomponents.xml:
	* flumotion/components/http/http.py:
	* flumotion/components/http/http.xml:
	* flumotion/components/http/http_gui.py:
	* flumotion/components/passwd/passwd.py:
	* flumotion/gui/adminclient.py:
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/config.py:
	* flumotion/server/controller.py:
	* flumotion/server/registry.py: Add *very* basic support for transmitting
	user interface over the wire. Still full of hacks.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/ui/admin.glade:
	* flumotion/gui/adminclient.py:
	* flumotion/server/admin.py:
	* flumotion/server/controller.py:
	* flumotion/utils/__init__.py:
	  Add a Reload code button.  Add utility function to reload
	  flumotion modules.  And it actually works as well.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/gui/adminclient.py:
	  handle dialogs a bit nicer.
	  error dialogs for exceptions raised on controller or component.
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py:
	  handle/forward exceptions
	* flumotion/twisted/errors.py:
	* flumotion/utils/gstutils.py:
	  better error messages for properties.
	  allow setting of strings.

2004-08-31  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/registry.py (ComponentRegistry): Implement
	saving and merging

	* flumotion/components: Split out to subdirectories and move out
	configuration to separate files

	* flumotion/twisted/portal.py (namedAny): Use a method of
	comparing the raised import message that actually works.

2004-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/server/admin.py:
	  clean up detached admin clients' perspective from Admin
	* flumotion/twisted/portal.py:
	  remove DEBUG print

2004-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/portal.py: