@@ -7,6 +7,9 @@ sys.path.insert(0, '@PYGTK_DIR@')
 import pygtk
 pygtk.require('2.0')
 
+from twisted.internet import gtk2reactor
+gtk2reactor.install()
+
 dir = os.path.dirname(os.path.abspath(__file__))
 if os.path.exists(os.path.join(dir, '.svn')):
     root = os.path.split(dir)[0]
